Fixed DBManager and Movie, added tests for DBManager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,10 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 add_subdirectory(googletest)
 
 add_executable(runAllTests
-  main.cpp
+  tests/test.cpp
   src/loginAuth.cpp
-
-  
+  src/DBManager.cpp
+  src/movie.cpp
 )
 
 target_link_libraries(runAllTests gmock gtest gtest_main)
