--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,38 +1,3 @@
-# CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
-# project(MovieRecommender)
-
-# ADD_SUBDIRECTORY(googletest)
-
-# SET(CMAKE_CXX_STANDARD 11)
-
-# # Make library
-# add_library(movie_lib STATIC
-#   src/FrontUI.cpp
-#   src/DBFilter.cpp
-#   src/DBManager.cpp
-#   src/loginAuth.cpp
-#   src/movie.cpp
-#   # add all .cpp files here
-# )
-# target_include_directories(movie_lib
-#   PUBLIC 
-#     ${PROJECT_SOURCE_DIR}/header
-# )
-# # Make executables
-# ADD_EXECUTABLE(runAllTests
-#   tests/test.cpp
-# )
-
-# ADD_EXECUTABLE(movieRec
-#   main.cpp
-# )
-
-# TARGET_LINK_LIBRARIES(movieRec movie_lib)
-
-# TARGET_LINK_LIBRARIES(runAllTests movie_lib)
-# TARGET_LINK_LIBRARIES(runAllTests gtest)
-# TARGET_COMPILE_DEFINITIONS(runAllTests PRIVATE gtest_disable_pthreads=ON)
-
 cmake_minimum_required(VERSION 3.20)
 project(final-project)
 
@@ -51,6 +16,7 @@ add_executable(runMain
   src/DBManager.cpp
   src/movie.cpp
   src/FrontUI.cpp
+  src/SortBy.cpp
   main.cpp
 )
 
