--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,19 @@ add_subdirectory(googletest)
 
 add_executable(runAllTests
   tests/test.cpp
+  tests/testDbFilter.cpp
+  src/DBFilter.cpp
+  src/loginAuth.cpp
+  src/DBManager.cpp
+  src/movie.cpp
+  src/FrontUI.cpp
+  src/SortBy.cpp
 )
 add_executable(runMain
   src/DBFilter.cpp
   src/loginAuth.cpp
   src/DBManager.cpp
   src/movie.cpp
-  tests/test.cpp
-  tests/testDbFilter.cpp
   src/FrontUI.cpp
   src/SortBy.cpp
   main.cpp
